fixed layout issue

--- a/src/app/components/option/option.component.scss
+++ b/src/app/components/option/option.component.scss
@@ -175,8 +175,8 @@
   &--empty {
     background-color: rgba(0, 0, 0, 0.1);
     @media only screen and (min-width: 767px) {
-      width: 14rem;
-      height: 14rem;
+      width: 18.3125rem;
+      height: 18.3125rem;
       border-radius: 50%;
     }
   }
